--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 nav {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin-top: 15px;
 }
 .header {
